task 1,2 initial